# riot-fun

./: README.md  index.html  itemstore.js
backend/: backend.cabal  stack.yaml
backend/src/: Main.hs
frontend/: Dockerfile  itemstore.js  todo.css
frontend/widgets/: gpi-votes-add-startup.tag  item-detail.tag  startup-note.tag
widgets/: discuss.tag  foo.tag  gpi-app.tag  gpi-votes-add-startup.tag  item-app.tag  item-detail.tag
