name:                backend
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/rvion/backend#readme
license:             BSD3
license-file:        LICENSE
author:              rvion
maintainer:          vion.remi@gmail.com
copyright:           x
category:            x
build-type:          Simple
cabal-version:       >=1.10

executable backend
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
      base
    , servant
    , servant-server
    , aeson
    , warp
    , wai
    , text